# markdown-on-kitty

./: .envrc  .gitignore  LICENSE  README.ja.md  README.md  SECURITY.md  install.sh  lessons.md  pyproject.toml  requirements.txt  sample.md  task.md
.github/workflows/: ci.yml
mdview/: __init__.py  __main__.py  external.py  input.py  kitty.py  layout.py  mdview.py  package.json  parser.py  renderer.py  tex2svg.mjs  theme.py  watcher.py
tests/: conftest.py  test_parser.py  test_render_smoke.py
